Disable tracing in user service

Two problems:

 1. The tracing client library makes some now-invalid
    assumptions about its environment
 2. We don't have a tracing shell client setup properly
    for chrome or browser tests.

The second problem in particular is causing bad behavior
on OS X if anyone tries connecting to mojo:tracing.

This CL removes tracing usage from UserShellClient for
now.

BUG=609632
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/1963753002
Cr-Commit-Position: refs/heads/master@{#392378}

Former-commit-id: ad48a137fd13bf0966c58f17b667f3828dcd89ed